syntax = "proto3";

enum ErrorCode {
    WorkspaceNameInvalid = 0;
    WorkspaceIdInvalid = 1;
    AppColorStyleInvalid = 2;
    WorkspaceDescTooLong = 3;
    WorkspaceNameTooLong = 4;
    AppIdInvalid = 10;
    AppNameInvalid = 11;
    ViewNameInvalid = 20;
    ViewThumbnailInvalid = 21;
    ViewIdInvalid = 22;
    ViewDescTooLong = 23;
    ViewDataInvalid = 24;
    ViewNameTooLong = 25;
    UserUnauthorized = 100;
    WsConnectError = 200;
    InternalError = 1000;
    RecordNotFound = 1001;
}
